disable_mTLS.yaml
### kubectl apply -f disable_mTLS.yaml
### kubectl get peerauthentication -A

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
    name: default
    namespace: istio-system
spec:
    mtls:
        mode: DISABLE
