socialNetwork_manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: socialnetwork-user-service  # 여기서 빌드한 로컬 이미지 이름 사용
        ports:
        - containerPort: 8080
