socialservicemanifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: social-network
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
  selector:
    app: user-app
